# led-display-websocket-demo

./: .gitignore  README.md  run.bat
led-display-hardware/: Cargo.toml  README.md  openocd.cfg
led-display-hardware-ssl/: .gitignore  Cargo.toml  README.md  build.rs  openocd.gdb
led-display-hardware-ssl/.cargo/: config.toml
led-display-hardware-ssl/lib/: README.txt
led-display-hardware-ssl/lib/build_instructions/: README.txt  cortexm3.mk
led-display-hardware-ssl/src/: bearssl.rs  display.rs  main.rs  network.rs  old.rs  ssl.rs  tcp.rs  time.rs
led-display-hardware/.cargo/: config  config.toml
led-display-hardware/src/: display.rs  main.rs  network.rs
led-display-server/: Cargo.toml
led-display-server/src/: main.rs  server.rs
led-display-server/wwwroot/: index.html  index.js  index.ts
