[package]
name = "led-display-hardware"
version = "0.1.0"
authors = ["David Haig <david@ninjasource.com>"]
edition = "2018"

[dependencies]
#panic-itm = "0.4"
#nb = "0.1"
cortex-m-rt = "0.6.13"
cortex-m = "0.7.2"
embedded-hal = "0.2.4"
#embedded-websocket = { path = "../../embedded-websocket" }
#max7219-dot-matrix = { path = "../../max7219-dot-matrix" }
#w5500 = { path = "../../w5500" }
embedded-websocket = { git = "https://github.com/ninjasource/embedded-websocket", default-features = false }
#max7219-dot-matrix = { git = "https://github.com/ninjasource/max7219-dot-matrix" }
#w5500 = { git = "https://github.com/ninjasource/w5500" }
shared-bus = "0.2.0"
w5500 = { path = "../../w5500" }
max7219-dot-matrix = { path = "../../max7219-dot-matrix" }
stm32f1xx-hal = { version = "0.7", features = ["stm32f103", "rt"] }

# this is for logging
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

# this allows debugging in release mode (otherwise you only see assembly)
[profile.release]
debug = true

# this makes the binary small enough to fit on the device while still being able to build and upload in debug mode
[profile.dev]
opt-level = 's'